--- a/client/src/styles/Sidebar.css
+++ b/client/src/styles/Sidebar.css
@@ -16,3 +16,32 @@
 .city-div p{
     color: white;
 }
+
+/* media query for our mobile view */
+@media(max-width:450px){
+    .sidebar-con{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        bottom: 0px;
+        transition: all 0.5s ease;
+    }
+    .sidebar-open{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        bottom: 0px;
+        transition: all 0.5s ease;
+    }
+    .sidebar-close{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        bottom: 0px;
+        transform: translateX(-100%);
+        transition: all 0.5s ease;
+    }
+}
